tests/fixtures/invalid/round_4_args.py
# round() takes at most 2 arguments, got 4
x = round(1, 1, 1, 1)
